<resources>
    <!-- アプリ名 -->
    <string name="app_name">CalculationApp</string>

    <!-- ボタン名 -->
    <string name="button_key_00">0</string>
    <string name="button_key_01">1</string>
    <string name="button_key_02">2</string>
    <string name="button_key_03">3</string>
    <string name="button_key_04">4</string>
    <string name="button_key_05">5</string>
    <string name="button_key_06">6</string>
    <string name="button_key_07">7</string>
    <string name="button_key_08">8</string>
    <string name="button_key_09">9</string>
    <string name="button_key_addition">+</string>
    <string name="button_key_subtraction">-</string>
    <string name="button_key_multiplication">×</string>
    <string name="button_key_division">÷</string>
    <string name="button_key_clear">C</string>
    <string name="button_key_equal">=</string>
    <string name="textview_result_hint" />
    <string name="menu_home">Home</string>
    <!-- 他の文字列リソース -->

    <string name="input_hint">数値を入力してください</string>
    <string name="title_home" />
    <string name="title_dashboard" />
    <string name="title_notifications" />
    <string name="_0">0</string>
    <string name="_1">1</string>
    <string name="button_key_divide" />
    <string name="click_me">Click Me</string>
    <string name="button_key_decimal" />
    <string name="button_key_percentage" />
    <string name="button_key_plus_minus" />
</resources>