<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <!-- 結果表示用のTextView -->
    <TextView
        android:id="@+id/textView_result"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:textSize="24sp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:background="@color/gray"
        android:hint="@string/textview_result_hint"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/button_container"
        app:layout_constraintVertical_bias="0.5" />

    <!-- ボタンの配置用のLinearLayout -->
    <LinearLayout
        android:id="@+id/button_container"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/textView_result"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/bottom_navigation">

        <!-- 1行目 (クリアボタン) -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">
            <Button
                android:id="@+id/button_key_clear"
                style="@style/CommonButton"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:text="@string/button_key_clear" />
        </LinearLayout>

        <!-- 2行目 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_marginTop="10dp">
            <Button
                android:id="@+id/button_key_07"
                style="@style/CommonButton"
                android:layout_height="60dp"
                android:layout_width="100dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="5dp"
                android:text="@string/button_key_07" />
            <Button
                android:id="@+id/button_key_08"
                style="@style/CommonButton"
                android:layout_width="100dp"
                android:layout_height="60dp"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:text="@string/button_key_08" />
            <Button
                android:id="@+id/button_key_09"
                style="@style/CommonButton"
                android:layout_width="100dp"
                android:layout_height="60dp"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:text="@string/button_key_09" />
            <Button
                android:id="@+id/button_key_division"
                style="@style/CommonButton"
                android:layout_width="100dp"
                android:layout_height="60dp"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="15dp"
                android:text="@string/button_key_division" />
        </LinearLayout>

        <!-- 3行目 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_marginTop="10dp">
            <Button
                android:id="@+id/button_key_04"
                style="@style/CommonButton"
                android:layout_width="100dp"
                android:layout_height="60dp"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:text="@string/button_key_04" />
            <Button
                android:id="@+id/button_key_05"
                style="@style/CommonButton"
                android:layout_width="100dp"
                android:layout_height="60dp"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:text="@string/button_key_05" />
            <Button
                android:id="@+id/button_key_06"
                style="@style/CommonButton"
                android:layout_width="100dp"
                android:layout_height="60dp"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:text="@string/button_key_06" />
            <Button
                android:id="@+id/button_key_multiplication"
                style="@style/CommonButton"
                android:layout_width="100dp"
                android:layout_height="60dp"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:text="@string/button_key_multiplication" />
        </LinearLayout>

        <!-- 4行目 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_marginTop="10dp">
            <Button
                android:id="@+id/button_key_01"
                style="@style/CommonButton"
                android:layout_width="100dp"
                android:layout_height="60dp"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:text="@string/button_key_01" />
            <Button
                android:id="@+id/button_key_02"
                style="@style/CommonButton"
                android:layout_width="100dp"
                android:layout_height="60dp"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:text="@string/button_key_02" />
            <Button
                android:id="@+id/button_key_03"
                style="@style/CommonButton"
                android:layout_width="100dp"
                android:layout_height="60dp"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:text="@string/button_key_03" />
            <Button
                android:id="@+id/button_key_subtraction"
                style="@style/CommonButton"
                android:layout_width="100dp"
                android:layout_height="60dp"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:text="@string/button_key_subtraction" />
        </LinearLayout>

        <!-- 5行目 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_marginTop="10dp">
            <Button
                android:id="@+id/button_key_00"
                style="@style/CommonButton"
                android:layout_width="320dp"
                android:layout_height="60dp"
                android:layout_marginStart="-1dp"
                android:layout_marginEnd="10dp"
                android:text="@string/button_key_00" />
            <Button
                android:id="@+id/button_key_addition"
                style="@style/CommonButton"
                android:layout_width="100dp"
                android:layout_height="60dp"
                android:layout_marginEnd="0dp"
                android:text="@string/button_key_addition" />
        </LinearLayout>

        <!-- 6行目 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_marginTop="10dp">
            <Button
                android:id="@+id/button_key_equal"
                style="@style/CommonButton"
                android:layout_width="100dp"
                android:layout_height="60dp"
                android:layout_marginStart="28dp"
                android:layout_marginEnd="-300dp"
                android:text="@string/button_key_equal" />
        </LinearLayout>

    </LinearLayout>

    <!-- BottomNavigationView -->
    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="?android:attr/windowBackground"
        app:menu="@menu/bottom_navmenu"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
